samples/_failures_safe/1761086743_b099d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15417a4e.c: In function ‘main’:
./samples/SAFE/__tmp_15417a4e.c:178:12: error: missing terminating " character
  178 |     printf("Tokens
      |            ^~~~~~~
./samples/SAFE/__tmp_15417a4e.c:178:5: error: expected expression at end of input
  178 |     printf("Tokens
      |     ^~~~~~
./samples/SAFE/__tmp_15417a4e.c:178:5: error: expected declaration or statement at end of input
